# writing-an-interpreter-in-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  token.rs
src/evaluating/: builtin.rs  environment.rs  error.rs  evaluator.rs  mod.rs  object.rs
src/lexing/: ast.rs  lexer.rs  token.rs
src/parsing/: error.rs  parser.rs
src/repl/: mod.rs
